--- a/no1.html
+++ b/no1.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Soch le ache se! 🙄</h1>
-      <p>itte jldi nhi mtt bol🙄</p>
+      <h1> Why runchhi whyy 😭😭</h1>
+      <p> yess boloo 😭😭</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
